[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-session-store"
version = "0.1.0"
description = "Persist and retrieve multi-turn agent sessions to JSONL files — crash-safe append, metadata, list/delete."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "agents", "session", "persistence", "jsonl", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_session_store = ["py.typed"]
